unpackaged/main/default/objects/OrderApi__Package_Item__c/OrderApi__Package_Item__c.object-meta.xml
<CustomObject>
    <description>Package Items allow one Item to bundle other Items.</description>
    <label>Package Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Package Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>