unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RESERVED</description>
    <inlineHelpText>RESERVED</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>RESERVED</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>