unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related schedule item.</description>
    <inlineHelpText>** System Calculated ** Link to related schedule item.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Package Items</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>