unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/EventApi__Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Sponsor Package.</description>
    <inlineHelpText>Link to related Sponsor Package.</inlineHelpText>
    <label>Sponsor Package</label>
    <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
    <relationshipLabel>Package Items</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>