unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to the related Ticket Type. Derived, required and restricted to Package Items linked to parent Item that has a relationship with a Ticket Type.</description>
    <inlineHelpText>** System Calculated ** Link to the related Ticket Type. Derived, required and restricted to Package Items linked to parent Item that has a relationship with a Ticket Type.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Package Items</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>