unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Calculate_Pricing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes a required Package Item Price has to be calculated.</description>
    <inlineHelpText>Denotes a required Package Item Price has to be calculated.</inlineHelpText>
    <label>Calculate Pricing</label>
    <type>Checkbox</type>
</CustomField>