unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Display_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Button_Label__c</fullName>
    <defaultValue>$Label.OrderApi__Package_Item_Default_Add_To_Cart_Button_Label</defaultValue>
    <description>The label to display for the &quot;Add to Cart&quot; button in the shopping cart. Defaults to &quot;Add to Cart&quot;.</description>
    <inlineHelpText>The label to display for the &quot;Add to Cart&quot; button in the shopping cart. Defaults to &quot;Add to Cart&quot;.</inlineHelpText>
    <label>Add To Cart Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>