unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Display_Instructions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Instructions__c</fullName>
    <description>The shopping cart instructions displays above the package item view.</description>
    <inlineHelpText>The shopping cart instructions displays above the package item view.</inlineHelpText>
    <label>Display Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>