unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Display_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <description>By checking this field you are choosing the item to be displayed on the shopping cart, checkout, and receipt pages.</description>
    <inlineHelpText>By checking this field you are choosing the item to be displayed on the shopping cart, checkout, and receipt pages.</inlineHelpText>
    <label>Display Item</label>
    <type>Checkbox</type>
</CustomField>