unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Display_Label__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Label__c</fullName>
    <description>The shopping cart label replaces the default &quot;Package Item&quot; label which will render if no other label is provided.</description>
    <inlineHelpText>The shopping cart label replaces the default &quot;Package Item&quot; label which will render if no other label is provided.</inlineHelpText>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>