unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The integer value of the order the system will use to render the package item views in the shopping cart.</description>
    <inlineHelpText>The integer value of the order the system will use to render the package item views in the shopping cart.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>