unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Foreign_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Foreign_Key_Id__c</fullName>
    <description>System Field, For Coding purposes only. Used to efficiently insert package items and its related child package items in our system.</description>
    <externalId>true</externalId>
    <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert package items and its related child package items in our system.</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>