unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Group_Header__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Group_Header__c</fullName>
    <description>Text that will display in the front end as the group label.</description>
    <inlineHelpText>Text that will display in the front end as the group label.</inlineHelpText>
    <label>Group Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>