unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Group_Instructions_Text__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Group_Instructions_Text__c</fullName>
    <description>Text that will display below the group label in the front end.</description>
    <inlineHelpText>Text that will display below the group label in the front end.</inlineHelpText>
    <label>Group Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>