unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Is_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this package item is the Additional Item group.</description>
    <inlineHelpText>When checked, this package item is the Additional Item group.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>