unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Is_Recommended__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this item will display in the recommended item component on the parent item&#39;s detail page.</description>
    <inlineHelpText>When checked, this item will display in the recommended item component on the parent item&#39;s detail page.</inlineHelpText>
    <label>Is Recommended</label>
    <type>Checkbox</type>
</CustomField>