unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes a required Package Item when the Package (Item) is selected in the parent Sales Order Line.</description>
    <inlineHelpText>Denotes a required Package Item when the Package (Item) is selected in the parent Sales Order Line.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>