unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to the Item that is included in the Package.</description>
    <inlineHelpText>** Conditionally Required ** Link to the Item that is included in the Package. Required when the Package Item is not linked to a Item Class.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>