unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Item Class that contains Items that are either required or optional for selection as part of a sale of the Package Item. The requirement for selection of the Item related to the Item Class is controlled by the &quot;Is Optional&quot; field.</description>
    <inlineHelpText>Link to the Item Class that contains Items that are either required or optional for selection as part of a sale of the Package Item. The requirement for selection of the Item related to the Item Class is controlled by the &quot;Is Optional&quot; field.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Package Items (Do Not Display)</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>