unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Identifies the maximum quantity of Packaged Items that can be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 is infinite.</description>
    <inlineHelpText>Identifies the maximum quantity of Packaged Items that can be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 is infinite.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>