unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Maximum_Quantity_Per_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Quantity_Per_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** For Package Item for Item Classes only ** Identifies the maximum quantity of a single Item that can be selected when selecting Items from this Item Class. Defaults 0. The value of 0 is infinite.</description>
    <inlineHelpText>** For Package Item for Item Classes only ** Identifies the maximum quantity of a single Item that can be selected when selecting Items from this Item Class. Defaults 0. The value of 0 is infinite.</inlineHelpText>
    <label>Maximum Quantity Per Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>