unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Minimum_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Identifies the minimum quantity of Packaged Items that must be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 has no minimum.</description>
    <inlineHelpText>Identifies the minimum quantity of Packaged Items that must be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 has no minimum.</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>