unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Number_of_Free_Items__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Number_of_Free_Items__c</fullName>
    <description>Number of items from the group an end user can select and the item&#39;s price will be $0.</description>
    <inlineHelpText>Number of items from the group an end user can select and the item&#39;s price will be $0.</inlineHelpText>
    <label>Number of Free Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>