unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Package__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Package__c</fullName>
    <description>** Required ** The Item that packages the Item linked in the &quot;Packaged Item&quot; field.</description>
    <inlineHelpText>** Required ** The Item that packages the Item linked in the &quot;Packaged Item&quot; field.</inlineHelpText>
    <label>Package (Item)</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Package Items</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>