unpackaged/main/default/objects/OrderApi__Package_Item__c/fields/OrderApi__Package_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected package item here is the group created in the Additional Item tab on the Advanced Settings Builder.</description>
    <inlineHelpText>The selected package item here is the group created in the Additional Item tab on the Advanced Settings Builder.</inlineHelpText>
    <label>Package Item</label>
    <referenceTo>OrderApi__Package_Item__c</referenceTo>
    <relationshipLabel>Package Items</relationshipLabel>
    <relationshipName>Package_Items</relationshipName>
    <type>Lookup</type>
</CustomField>